feat: adding new durable object

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -17,8 +17,8 @@
 	"durable_objects": {
 		"bindings": [
 			{
-				"name": "Chat",
-				"class_name": "Chat"
+				"name": "AGENT_PERSUASIVE_COPY",
+				"class_name": "AgentPersuasiveCopy"
 			}
 		]
 	},
@@ -26,7 +26,7 @@
 		{
 			"tag": "v1",
 			"new_sqlite_classes": [
-				"Chat"
+				"AgentPersuasiveCopy"
 			]
 		}
 	],
